...
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/stepsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="Steps:"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/stepsList"
            android:layout_width="match_parent"
...
