...
        android:gravity="center"
        android:text="Categories"
        android:textColor="@android:color/black"
        android:textSize="50sp"></androidx.appcompat.widget.AppCompatTextView>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:padding="14dp"
        app:columnCount="2"
        app:rowCount="3">
...
